[package]
name = "lean-sys"
version = "0.0.3"
authors = ["Jad Ghalayini <jeg74@cl.cam.ac.uk>"]
edition = "2021"
description = "Bindings to Lean 4's C API"
repository = "https://gitlab.com/tekne/lean-sys"
license = "MIT OR Apache-2.0"
keywords = ["lean", "math", "bindings"]
categories = ["external-ffi-bindings"]
links = "leanshared"

[features]
small_allocator = []
extern = []
static = []
default = ["small_allocator", "static"]

[dependencies]
libc = { version = "0.2", default-features = false }
memoffset = "0.7"
static_assertions = "1.1.0"
lock_api = "0.4.10"

[dev-dependencies]
rand = "0.8"
rand_xoshiro = "0.6"
